--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,6 +1,8 @@
 body {
+  padding: 30px 0;
+  background: #92adde;
   margin: 0;
-  padding: 0;
+  color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,4 +13,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input {
+  margin: 5px 0;
+  padding: 6px 8px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  color: #4a4a4a;
+  box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 0.3);
+}
+
+label {
+  color:#cfd1e6;
 }
