--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,13 +1,16 @@
 body {
   padding: 30px 0;
-  background: #92adde;
   margin: 0;
   color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(45deg, #92adde 12.5%, #fff 12.5%, #fff 37.5%, #92adde 37.5%, #92adde 62.5%, #fff 62.5%, #fff 87.5%, #92adde 87.5%);
+  background-size: 100px 100px;
+  background-position: 50px 50px;
+  background-color: #92adde;
 }
 
 code {
