--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,4 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   padding: 30px 0;
   margin: 0;
   color: #fff;
@@ -7,10 +16,8 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(45deg, #92adde 12.5%, #fff 12.5%, #fff 37.5%, #92adde 37.5%, #92adde 62.5%, #fff 62.5%, #fff 87.5%, #92adde 87.5%);
-  background-size: 100px 100px;
-  background-position: 50px 50px;
-  background-color: #92adde;
+  background-color: #e79087;
+  background-image: linear-gradient(315deg, #e79087 0%, #fcd181 74%);
 }
 
 code {
@@ -29,5 +36,5 @@ input {
 }
 
 label {
-  color:#cfd1e6;
+  color:#fff;
 }
